Fixed popup option. Added spacing to user titles.

--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@
    font-weight: 500;
    font-size: 14px;
    color: rgba(0, 0, 0, 0.5);
+   padding-bottom: 8px;
  }
 
  /* Reset */
@@ -62,7 +63,7 @@
    text-align: center;
  }
 
- #body {
+ #gis_body {
     overflow: hidden;
   }
 
